# scpcb_redux

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  rust.yml
assets/configs/: loadscreens.ron  options.ron  rooms.ron
assets/videos/: startup_tss.avi  startup_undertow.avi
crates/bevy_b3d/: Cargo.toml
crates/bevy_b3d/src/: lib.rs  loader.rs
crates/bevy_rmesh/: Cargo.toml
crates/bevy_rmesh/src/: lib.rs  loader.rs
crates/bevy_xfile/: Cargo.toml
crates/bevy_xfile/src/: lib.rs  loader.rs
src/: main.rs  systems.rs
src/game/: components.rs  mod.rs  systems.rs
src/game/player/: bundles.rs  components.rs  mod.rs  resources.rs  systems.rs
src/game/scp_106/: components.rs  mod.rs  systems.rs
src/game/scps/: mod.rs
src/game/scps/scp_106/: components.rs  mod.rs  systems.rs
src/game/scps/scp_173/: components.rs  mod.rs  systems.rs
src/game/ui/: components.rs  mod.rs  systems.rs
src/game/ui/hud/: components.rs  mod.rs  systems.rs
src/game/ui/pause_menu/: components.rs  mod.rs  styles.rs
src/game/ui/pause_menu/systems/: interactions.rs  layout.rs
src/main_menu/: components.rs  mod.rs  resources.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/preload/: mod.rs
src/preload/video/: loader.rs  mod.rs
src/states/: game.rs  menu.rs  mod.rs  splash.rs
