[package]
name = "scpcb_redux"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = ["crates/*"]
# resolver = "2"

[dependencies]
bevy_b3d = "0.3.2"
bevy_rmesh = "0.3.1"
# bevy_xfile = { path = "crates/bevy_xfile" }
bevy_xpbd_3d = "0.4.2"
bevy-inspector-egui = "0.23.4"
leafwing-input-manager = "0.13.3"
rand = "0.8.5"
# avi = { version = "0.1.0", path = "../video/avi" }
# image = "0.24.8"
# anyhow = "1.0.79"

[dependencies.bevy]
version = "0.13.1"
default-features = false

features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "jpeg",
    "hdr",
    "vorbis",
    "x11",
    "wayland",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
    "wav",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
